[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "worker"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tokio = { version = "1.25", features = ["sync", "rt", "io-std", "io-util", "fs", "process", "macros", "time" ] }
snafu = { version = "0.7.4", features = ["futures"] }
strum = { version = "0.24.1", features = ["derive"] }
tokio-util = { version = "0.7.7", features = ["io", "io-util"] }
tokio-stream = "0.1.12"

[dev-dependencies]
tempdir = "0.3.7"
