[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bincode = "1.3"
futures = { version = "0.3.28", default-features = false, features = ["executor"] }
serde = { version = "1.0", features = ["derive"] }
snafu = { version = "0.7.4", features = ["futures"] }
strum = { version = "0.24.1", features = ["derive"] }
tokio = { version = "1.25", features = ["sync", "rt", "io-std", "io-util", "fs", "process", "macros", "time" ] }
tokio-stream = "0.1.12"
tokio-util = { version = "0.7.7", features = ["io", "io-util"] }

[dev-dependencies]
tempdir = "0.3.7"
